located files in folders and fixed paths to main page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <header>
         <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
         <nav>
-            <a rel="resume" href="resume.html"> Resume</a>
-            <a rel="about-me" href="aboutpage.html"> About Me</a>
+            <a rel="resume" href="./presume/resume.html"> Resume</a>
+            <a rel="about-me" href="./pabout/aboutpage.html"> About Me</a>
             <a href="https://medium.com/@skippydrumskins"> My Blog </a>
-            <a rel="contact" href="contact.html"> Contact Me</a>
+            <a rel="contact" href="./pcontact/contact.html"> Contact Me</a>
         </nav>
         </header>
         <main>
