--- a/pabout/aboutpage.html
+++ b/pabout/aboutpage.html
@@ -10,7 +10,7 @@
     <main class="grid">
         <header>
             <h1>TODD ELDRIDGE</h1>
-            <a rel="main" href="index.html">MAIN</a>
+            <a rel="main" href="./../index.html">MAIN</a>
         </header>
         <div class="early">
             <h2>EARLY YEARS</h2>
