--- a/pcontact/contact.html
+++ b/pcontact/contact.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>FILL THE FORM PLEASE<br>
-        <a rel="main" href="index.html">Main</a>
+        <a rel="main" href="./../index.html">Main</a>
         </header>
         <form>
             <div class="flname">
