--- a/presume/resume.html
+++ b/presume/resume.html
@@ -11,7 +11,7 @@
         <header>
             <h1>TODD ELDRIDGE</h1>
             <p>WEB DEVELOPER/WRITER/ACTOR</p><br>
-            <a rel="main" href="index.html">Main</a>
+            <a rel="main" href="./../index.html">Main</a>
         </header>    
         <div class="profile">
             <h2>PROFLILE</h2>
@@ -20,8 +20,10 @@
                 Stage actor with Shakespearean experience, as well as stage hand and directing.
                 Writer of novelizations and screenplays.
             </p>
-        </div class="pic">
+        </div>
+        <div class="pic">
             <img src="resumepic.jpg" id="image" alt="my image">
+        </div>    
         <div class="contact">
             <h2>REACH ME</h2>
             <a>(806) 441-6732</a><br>
@@ -51,8 +53,7 @@
             <p></p>
         </div>
         <div class="job1">
-            <h2>January 2034 - December 2040</h2>
-            <h3>PLACES WHERE I WORKED</h3>
+            <h2>January 2003 - June 2020</h2>
             <ul> 
                 <li>Dairy Queen 2003-2004</li>
                 <li>Showplace 6 - Assistant MGR 2004-2008</li>
@@ -60,8 +61,8 @@
                 <li>Limosuine Detailer 2008-2009</li>
                 <li>Rib Crib 2008-2009</li>
                 <li>Cellar Beer Barn 2008-2009</li>
-            </ul><br>
-            <ul>    
+            </ul>
+            <ul class="li2">    
                 <li>Walden Books 2009-2011</li>
                 <li>CiCi's Pizza 2010-2010</li>
                 <li>TTU Museuem Natural History - Security 2010-2011</li>
@@ -72,7 +73,7 @@
             </ul>
         </div>
         <div class="job2">
-            <h2>January 2041 - Current</h2>
+            <h2>CURRENT</h2>
             <h3>ACHIEVEMENTS</h3>
             <ul>
                 <li>Top Gun Counter - RGIS highest counter level</li>
